--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --runInBand",
     "prepare": "husky install",
     "start": "node listen.js",
-    "seed-test": "jest seed.test.js"
+    "seed-test": "jest seed.test.js",
+    "dev": "nodemon ./listen.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,13 @@
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^27.5.1",
-    "jest-extended": "^2.0.0"
+    "jest-extended": "^2.0.0",
+    "supertest": "^7.2.2"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11",
     "pg": "^8.17.2",
     "pg-format": "^1.0.4"
   },
