--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "supertest": "^7.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "dotenv": "^16.4.7",
     "express": "^5.2.1",
     "nodemon": "^3.1.11",
