--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "seed": "node ./db/seeds/run-seed.js",
     "seed-prod": "NODE_ENV=production npm run seed",
     "test": "jest --runInBand",
-    "prepare": "husky install",
+    "prepare": "node -e \"process.exit(process.env.NODE_ENV==='production' ? 0 : 1)\" || husky install",
     "start": "node listen.js",
     "seed-test": "jest seed.test.js",
     "dev": "nodemon ./listen.js"
